--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -3822,3 +3822,26 @@ button {
   top: 0;
   font-size: 10px;
 }
+
+#slide_container {
+	overflow : hidden;
+	width : 100%;
+	height : 177px;
+	display : block;
+}
+
+#slide_images {
+	width : 400%;
+	transition : all 1.0s ease-in-out;
+	transform : translateX(0%);
+	transform-origin : translateX(0%);
+}
+
+.img_promotion {
+	width : 25%;
+	float : left;
+}
+
+.img_promotion > img {
+	width : 100%;
+}
